2007-04-28  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-user-actions.cc:
	* src/gnome-cmd-user-actions.h:
	Added "no.action" to user actions

2007-04-27  Piotr Eljasiak  <epiotr@use.pl>

	* src/dirlist.cc:
	i18 of progress bar message

	* src/gnome-cmd-file-popmenu.cc:
	Fixed crash when right clicking on any file.

2007-04-16  Piotr Eljasiak  <epiotr@use.pl>

	* src/Makefile.am:
	* src/dict.h:
	More generalized version of DICT<> class

2007-04-04  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.cc:
	Set default "/options/date_disp_mode" to "%x %R"

	* src/gnome-cmd-bookmark-dialog.cc:
	* src/gnome-cmd-cmdline.cc:
	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-ftp-dialog.cc:
	* src/gnome-cmd-main-menu.cc:
	* src/gnome-cmd-main-win.cc:
	* src/gnome-cmd-main-win.h:
	* src/gnome-cmd-mkdir-dialog.cc:
	* src/gnome-cmd-python-plugin.cc:
	* src/gnome-cmd-search-dialog.cc:
	* src/gnome-cmd-user-actions.cc:
	Replace all gnome_cmd_main_win_get_{active,inactive}_fs(...) with 
	equivalent gnome_cmd_main_win_get_fs (...,{ACTIVE,INACTIVE})

2007-04-03  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-user-actions.cc:
	Added shortcut CTRL+5 to md5sum python plugin

	* src/gnome-cmd-main-menu.cc:
	* src/gnome-cmd-user-actions.cc:
	* src/gnome-cmd-user-actions.h:
	Support for directory synchronizing

2007-04-02  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-user-actions.cc:
	More intuitive usage of diff tool

2007-03-31  koos  <kjniesink@yahoo.co.uk>

	* src/utils.cc:
	Removed gtk dialog warning

2007-03-26  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-user-actions.cc:
	* src/gnome-cmd-user-actions.h:
	Added support for user defined shortcuts (via configuration file)

2007-03-20  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-cmdline.c:
	Added 'cd -' for changing to the previous working directory from the cmdline
